[gd_scene load_steps=9 format=3 uid="uid://bnyn3h8l1xpkw"]

[ext_resource type="Script" path="res://Scene/player.gd" id="1_142c2"]
[ext_resource type="Texture2D" uid="uid://cenrsqdxhuelw" path="res://SpaceShooter_Assets/player_sheet.png" id="2_ukvue"]
[ext_resource type="Texture2D" uid="uid://cneeqa3ehu7j6" path="res://SpaceShooter_Assets/UI_Flat_Filler_02.png" id="3_81vj0"]
[ext_resource type="Texture2D" uid="uid://d1vy2b5237f3f" path="res://SpaceShooter_Assets/UI_Flat_Fillbar_02_Hollow.png" id="4_wm8df"]
[ext_resource type="Texture2D" uid="uid://7afdebggug7j" path="res://SpaceShooter_Assets/UI_Flat_Filler_01.png" id="5_unkr7"]
[ext_resource type="Texture2D" uid="uid://cdyfwy7yicfpu" path="res://SpaceShooter_Assets/shield.png" id="5_w4vun"]
[ext_resource type="AudioStream" uid="uid://b4oxkdmbe66gf" path="res://audio/laser.wav" id="7_qc55q"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1yq1y"]
radius = 2.23607

[node name="Player" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_142c2")

[node name="Player_image" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_ukvue")
hframes = 3
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1yq1y")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 48

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(0, -1)
polygon = PackedVector2Array(-10, -39, 8, -39, 12, -14, 35, 0, 44, -7, 49, -7, 47, 24, 41, 24, 40, 21, 13, 27, 7, 37, -9, 37, -14, 28, -41, 23, -42, 26, -47, 26, -50, -8, -43, -8, -43, -7, -37, -1, -14, -14)

[node name="Shooting_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(0, -67)

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -32.0
offset_top = 19.0
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
value = 100.0
texture_under = ExtResource("3_81vj0")
texture_over = ExtResource("4_wm8df")
texture_progress = ExtResource("5_unkr7")

[node name="Shield" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -25)
texture = ExtResource("5_w4vun")

[node name="Shield_timer" type="Timer" parent="."]
wait_time = 10.0

[node name="laser_audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_qc55q")

[connection signal="body_entered" from="Area2D" to="." method="decrease_health"]
[connection signal="timeout" from="Shooting_timer" to="." method="able_to_shoot_laser"]
[connection signal="timeout" from="Shield_timer" to="." method="_on_shield_timer_timeout"]
